created pages and components, created routes to rendered components on their respective pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flix-project-frontend-copy",
+  "name": "flix-project-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
